# HIP3-market

./: .env  .env.example  QUICKSTART.md  README.md  config.py  database.py  enhanced_multi_market_monitor.py  enhanced_websocket_client.py  main.py  market_data.py  metrics_market.py  metrics_server.py  multi_market_main.py  multi_market_monitor.py  orderbook.py  pyproject.toml  requirements.txt  run_enhanced_demo.py  schema.sql  start_with_metrics.sh  websocket_client.py  websocket_persistent.py
schema/: market_metrics.sql
