[project]
name = "link-market"
version = "0.1.0"
description = "High-performance Hyperliquid LINK perpetual market monitoring system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Market Monitor", email = "monitor@example.com"}
]
license = {text = "MIT"}
keywords = ["hyperliquid", "market", "monitoring", "cryptocurrency", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0", 
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
performance = [
    "uvloop>=0.19.0",
    "orjson>=3.9.10",
]
analytics = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
caching = [
    "redis>=5.0.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
all = [
    "link-market[performance,analytics,caching]",
]

[project.scripts]
link-market = "main:main"
link-market-migrate = "migrate_to_optimized:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
